force-app/main/default/objects/Currency_Label__mdt/Currency_Label__mdt.object-meta.xml
<CustomObject>
    <description>Maps Currency ISO Codes, and whether the currency is singular or plural, to an Apex Class that retrieves the Custom Label for the required noun.</description>
    <label>Currency Label</label>
    <pluralLabel>Currency Labels</pluralLabel>
</CustomObject>