force-app/main/default/objects/Currency_Label__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>Name of the class used to retrieve the required noun label</description>
    <label>Apex Class Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>