force-app/main/default/objects/Currency_Label__mdt/fields/Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO_Code__c</fullName>
    <description>The ISO 3-letter Code for the Currency</description>
    <label>Currency ISO Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>