force-app/main/default/objects/Currency_Label__mdt/fields/Is_Singular__c.field-meta.xml
<CustomField>
    <fullName>Is_Singular__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the class retrieves the name for the singular or plural noun</description>
    <label>Is Singular</label>
    <type>Checkbox</type>
</CustomField>